<resources>
    <string name="app_name">ContactsManager</string>
    <string name="show_additional_fields">Show Additional Fields</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="IM">IM</string>
    <string name="hide_additional_fields">Hide Additional Fields</string>
    <string name="phone_error">Phone number received from intent is null!</string>
</resources>
